# LogSentinel-CN

./: README.md  api.py  app.py  pyproject.toml  requirements.txt
agents/: playbook_agent.py
agents/SKILLS/: playbook_skill.md  summarizer_skill.md
back/: .gitignore  api.py  app.py  pyproject.toml  requirements.txt
back/agents/: playbook_agent.py  summarizer_agent.py
back/agents/SKILLS/: playbook_skill.md  summarizer_skill.md
back/models/: scaler.pkl
back/pipeline/: analyzer.py  run_pipeline.py
back/prompts/: playbook_prompt.py  summarizer_prompt.py
back/services/: log_generator.py
back/training/: main.ipynb
front/: .env.example  .gitignore  index.html  tailwind.config.ts  vite.config.ts
front/.playwright-mcp/: page-2026-04-23T17-45-21-683Z.yml
front/src/: App.tsx  index.css
front/src/hooks/: useIncidentsStream.ts
front/src/lib/: api.ts
front/src/pages/: Analytics.tsx  Index.tsx
landing/: .gitignore  design.md  index.html  package-lock.json  package.json
landing/src/: App.tsx  index.css
landing/src/components/: Atmosphere.tsx  BenchmarkSection.tsx  CTASection.tsx  DocumentationSection.tsx  FeatureCard.tsx  FeaturesSection.tsx  Footer.tsx  GhostCursor.tsx  Hero.tsx  HowItWorksSection.tsx  Navbar.tsx  PricingSection.tsx  ProblemSection.tsx  SmoothScroll.tsx  UseCasesSection.tsx
landing/src/pages/: DocumentationPage.tsx  TroubleshootingPage.tsx
models/: isolationForest.pkl
pipeline/: analyzer.py  parser.py  run_pipeline.py
prompts/: playbook_prompt.py  summarizer_prompt.py
services/: log_generator.py
(+9 files in other folders)
