[project]
name = "logsentinel-cn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "langchain>=1.2.12",
    "langchain-groq>=1.1.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.55.0",
    "tqdm>=4.67.3",
]
