[project]
name = "logsentinel-cn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "langchain>=1.2.12",
    "langchain-groq>=1.1.2",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.55.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.41.0",
]
